fix: change rendering of font on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   height: 80vh;
   width: 100%;
   background-color: #b3b3b3;
+  text-rendering: optimizeLegibility;
 }
 
 body {
